# SDT_1_FileMontoring

./: CMakeLists.txt  README.md  class.puml  consolewriter.cpp  consolewriter.h  filemanager.cpp  filemanager.h  logger.cpp  logger.h  main.cpp  monitoredfile.cpp  monitoredfile.h
